# haki-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  skills-lock.json
.github/workflows/: ci.yml  deploy.yml  eval-nightly.yml
backend/: adapters.py  citations.py  clients.py  config.py  graph.py  handler.py  ingest_local.py  metrics.py  observability.py  prompts.py  pyproject.toml  rag.py  server_local.py  test_e2e_local.py  test_language_detection.py  test_unit.py
backend/agents/: CLAUDE.md  __init__.py  chat.py  classifier.py  specialists.py  supervisor.py  synthesizer.py  title.py
backend/app/: CLAUDE.md  auth.py  config.py  graph.py  handler.py  ingest_from_web_sources.py  ingest_local.py  server_local.py
backend/clients/: CLAUDE.md  __init__.py  adapters.py
backend/evals/: CLAUDE.md  __init__.py  audit.py  generate.py  generation_cost.py  golden_set.jsonl  llm_judge.py  loader.py  ragas_run.py  report.py  retrieval_metrics.py  run.py  runner.py  testset_generator.py
backend/memory/: CLAUDE.md  checkpointer.py  threads.py
backend/observability/: CLAUDE.md  metrics.py
backend/prompts/: CLAUDE.md  __init__.py
backend/rag/: CLAUDE.md  __init__.py  bm25.py  catalog.py  citations.py  filters.py  generator.py  pipeline.py  query_expansion.py  reranker.py  rrf.py  sagemaker_generator.py
backend/scripts/: build_chunk_catalog.py  prepare_finetune_data.py
backend/tests/: CLAUDE.md  test_e2e_local.py  test_language_detection.py  test_unit.py
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: global-setup.ts  playwright.config.ts  tsconfig.json
frontend/e2e/fixtures/: mockBackend.ts  test.ts
frontend/e2e/pages/: ChatPage.ts  ThreadSidebarPage.ts
frontend/e2e/specs/: anonymous.spec.ts  signed-in.spec.ts
frontend/src/: App.tsx  app.css  index.css  main.tsx  vite-env.d.ts
infra/: .gitignore  Makefile  main.tf  outputs.tf  terraform.tfvars  variables.tf
pipeline/: .gitignore  README.md  package-lock.json  package.json
pipeline/src/: assemble.test.ts  assemble.ts  chunk-laws.ts  chunk.ts  config.ts  crawl-sheriaplex.test.ts  crawl-sheriaplex.ts  llm-extract.ts  run.ts  s3-client.ts  upload.ts
scripts/: bootstrap.sh  run-finetune.sh
(+43 files in other folders)
