[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.91",
    "langgraph>=0.2.50",
    "langsmith>=0.1.0",
    # rank_bm25 is a pure-Python BM25 implementation (no native deps) used by
    # the advanced-RAG hybrid retriever. ~20KB wheel, loads in-process in
    # Lambda with zero cold-start penalty beyond the import itself.
    "rank-bm25>=0.2.2",
]

# Local-only deps — chromadb pulls ~50MB of native wheels (hnswlib, onnx)
# that we never need in the Lambda. Kept out of the top-level deps so
# `uv export --frozen` (used by the Lambda layer build) doesn't ship them.
# Installed locally via `uv sync --group local`.
[dependency-groups]
local = [
    "chromadb>=1.5.8",
]
# RAGAS pulls ~200MB of langchain + datasets + pyarrow that we never want
# in the Lambda zip. Kept behind an opt-in group so CI can run a full
# RAGAS sweep while dev-loop runs of `uv run -m evals.run` stay fast.
#
# langchain-aws is the canonical wrapper for ChatBedrock + BedrockEmbeddings;
# RAGAS uses these via LangchainLLMWrapper / LangchainEmbeddingsWrapper for
# both the metric scorer (`ragas_run.py`) and the test-set generator
# (`testset_generator.py`).
evals = [
    "ragas>=0.2.0",
    "datasets>=2.19.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    # Required by ragas.testset default transforms (NER overlap similarity
    # via OverlapScoreBuilder). RAGAS imports it lazily and raises if
    # missing; pinning here avoids surprising failures 70 s into a paid
    # generation run.
    "rapidfuzz>=3.9.0",
]
